<?xml version="1.0"?>
<package format="2">
  <name>nurse_bot</name>
  <version>0.0.0</version>
  <description>The nurse-bot package</description>

  <maintainer email="sakshi@umd.edu">Sakshi Kakde</maintainer>
  <maintainer email="stelang@umd.edu">Siddharth Telang</maintainer>
  <maintainer email="anubhavp@umd.edu">Anubhav Paras</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/nurse-bot</url> -->


  <author email="sakshi@umd.edu">Sakshi Kakde</author>
  <author email="stelang@umd.edu">Siddharth Telang</author>
  <author email="anubhavp@umd.edu">Anubhav Paras</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend> 
  <build_depend>control_msgs</build_depend>
  <build_depend>fiducial_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>fiducial_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  
  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>google-mock</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>moveit_ros_planning_interface</test_depend> 
  <test_depend>control_msgs</test_depend>
  <test_depend>fiducial_msgs</test_depend>
  <test_depend>tf2_ros</test_depend>
  <test_depend>tf2_geometry_msgs</test_depend>
  <test_depend>code_coverage</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
